--- a/src/Components/Create/Create.css
+++ b/src/Components/Create/Create.css
@@ -7,17 +7,22 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 6px;
-  }
-  .input {
+}
+
+.input {
     border-top-color: transparent;
     border-left-color: transparent;
     border-right-color: transparent;
     outline-color: transparent;
-    margin-bottom:35px ;
+    margin-bottom: 35px;
     background-color: transparent;
-  }
-  
-  .uploadBtn {
+}
+
+input:not(:valid) {
+    background-color: lightsalmon;
+}
+
+.uploadBtn {
     margin-top: 30px;
     width: 100%;
     height: 48px;
@@ -25,12 +30,14 @@
     background-color: #002f34;
     color: whitesmoke;
     font-weight: 900;
-  }
-  .uploadBtn:hover {
+}
+
+.uploadBtn:hover {
     background-color: white;
     color: #002f34;
     border: 2px solid #002f34;
-  }
-  .centerDiv label{
+}
+
+.centerDiv label {
     font-weight: bold;
-  }
+}
