--- a/src/Components/PostCards/postcards.css
+++ b/src/Components/PostCards/postcards.css
@@ -1,46 +1,77 @@
 .card {
     margin-right: 15px;
-    padding: 13px;
-    max-width: 222px;
-    width: 222px;
-    height: 270px;
+    max-width: 250px;
+    width: 250px;
+    height: 250px;
     display: inline-block;
     cursor: pointer;
-  }
-  
-  .card .favorite {
+}
+
+.card .image-container {
+    width: 248px;
+    height: 250px;
+}
+
+.card .image-container .favorite {
+    top: 5px;
+    right: 5px;
+    z-index: 2;
+    position: absolute;
+}
+
+.card .image-container .image {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  .card .image {
-    display: flex;
+    position: relative;
     justify-content: center;
+    width: 100%;
+    height: 80%;
     align-items: center;
-  }
-  
-  .card .image img {
+    z-index: 1;
+}
+
+.card .image img {
     height: 100px;
     max-width: 100%;
     max-height: 100%;
     min-height: 100%;
     text-align: center;
-  }
-  .card .content .rate {
-    margin-top: 10px;
-    font-size: larger;
-    font-weight: bold;
-  }
-  .card .content .category {
-    font-size: medium;
-  }
-  .card .content .name {
+}
+
+.card .content {
+  margin-top: -30px;
+}
+
+.card .content .rate {
     font-size: small;
-  }
-  .card .date {
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.card .content #content-left {
+    display: inline-block;
+    width: 50%;
+}
+
+.card .content #content-right {
+    display: inline-block;
+    width: 50%;
+}
+
+.card .content .category {
+    font-size: small;
+}
+
+.card .content .name {
+    font-size: medium;
+    font-weight: bold;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.card .date {
     display: flex;
     justify-content: flex-end;
     font-size: small;
-  }
+}
   
