--- a/src/Components/PostCards/PostCard.css
+++ b/src/Components/PostCards/PostCard.css
@@ -47,9 +47,11 @@
 .card .image img {
     height: 100px;
     max-width: 100%;
+    width: 100%;
     max-height: 100%;
     min-height: 100%;
     text-align: center;
+    border-radius: 2px;
 }
 
 .card .content {
