--- a/src/Components/View/ViewComponent.css
+++ b/src/Components/View/ViewComponent.css
@@ -1,65 +1,140 @@
-.viewParentDiv {
-  padding-top: 4em;
-  display: flex;
-}
-.viewParentDiv .imageShowDiv {
-  padding: 16px;
-  width: 70vw;
-  
-}
-.viewParentDiv .imageShowDiv img {
-  width: 65vw;
-  height:100%;
-  object-fit: cover;
+.viewParentHorizontalDiv {
+    padding-top: 5em;
+    display: flex;
+    color: #f5f5f5
 }
 
-.viewParentDiv .rightSection {
-  padding: 16px;
-  margin-top: 3em;
-  width: 30vw;
+.viewParentHorizontalDiv .imageShowDiv {
+    padding: 16px;
+    width: 60vw;
+
 }
 
-.viewParentDiv .rightSection .productDetails :first-child {
-  font-weight: 700;
-  margin-bottom: 8px;
-  color: #002f34;
-  font-size: 34px;
-  line-height: 32px;
-  margin-bottom: 20px;
+.viewParentHorizontalDiv .imageShowDiv img {
+    max-width: 700px;
+    max-height: 700px;
+    height: 100%;
+    object-fit: contain;
 }
 
-.viewParentDiv .rightSection .productDetails {
-  border: 1px solid black;
-  padding: 6px;
-  border-radius: 6px;
-  margin-bottom: 2em;
-  width: 100%;
+.viewParentHorizontalDiv .rightSection {
+    padding: 16px;
+    margin-top: 7em;
+    width: 37vw;
 }
 
-.viewParentDiv .rightSection .contactDetails {
-  border: 1px solid black;
-  padding: 6px;
-  border-radius: 6px;
-  
+.viewParentHorizontalDiv .rightSection .productDetails :first-child {
+    font-weight: 700;
+    margin-bottom: 8px;
+    color: #002f34;
+    font-size: 34px;
+    line-height: 32px;
+    margin-bottom: 140px;
 }
 
-.viewParentDiv .rightSection .productDescription {
-  border: 1px solid black;
-  padding: 6px;
-  border-radius: 6px;
-  margin-bottom: 2em;
+.productPrice {
+    font-weight: 700;
+    color: black;
+    font-size: 34px;
+    line-height: 32px;
+}
+
+.shortDescription {
+    margin-top: 50px;
+    font-size: 17px;
+    line-height: 23px;
+    max-lines: 5;
+    display: -webkit-box;
+    -webkit-line-clamp: 3; /* Adjust the number of lines here */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    color: black
+}
+
+.viewParentHorizontalDiv .rightSection .productDetails {
+    /*border: 1px solid black;*/
+    padding: 6px;
+    /*border-radius: 6px;*/
+    margin-bottom: 2em;
+    width: 100%;
+}
+
+.viewParentHorizontalDiv .rightSection .productDetails p {
+    color: black
 }
 
 
-.viewParentDiv .rightSection .contactDetails .productDescription :first-child {
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 700;
-  color: #002f34;
-  font-weight: 400;
-  padding: 0;
+.preview-button {
+    width: 200px;
+    height: 75px;
+    background-color: orange;
+    color: white;
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    padding: 10px 20px;
+    margin: 30px;
 }
 
-.p-bold{
-  font-weight: bolder;
+.download-button {
+    width: 250px;
+    height: 75px;
+    background-color: red;
+    color: white;
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    padding: 10px 20px;
+    margin: 30px;
+}
+
+.download-button:hover {
+    width: 250px;
+    height: 75px;
+    background-color: black;
+    color: white;
+    font-size: 24px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    padding: 10px 20px;
+    margin: 30px;
+}
+
+.viewParentHorizontalDiv .rightSection .contactDetails {
+    border: 1px solid black;
+    padding: 6px;
+    border-radius: 6px;
+
+}
+
+.viewParentHorizontalDiv .rightSection .productDescription {
+    border: 1px solid black;
+    padding: 6px;
+    border-radius: 6px;
+    margin-bottom: 2em;
+}
+
+
+.viewParentHorizontalDiv .rightSection .contactDetails .productDescription :first-child {
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 700;
+    color: #002f34;
+    font-weight: 400;
+    padding: 0;
+}
+
+.p-bold {
+    font-weight: bolder;
+}
+
+.bottomVerticalSection {
+    margin: 2em;
+}
+
+.bottomVerticalSection .productDescription {
+    font-size: 20px;
 }
