Home design rewrite WIP

--- a/assets/styles/components/Header.css
+++ b/assets/styles/components/Header.css
@@ -1,10 +1,10 @@
-.headerParentDiv {
-  padding: 10px 16px;
-  background-color: whitesmoke;
-  position: fixed;
-  width: 100%;
-  z-index: 999;
-}
+/*.headerParentDiv {*/
+/*  padding: 10px 16px;*/
+/*  background-color: whitesmoke;*/
+/*  position: fixed;*/
+/*  width: 100%;*/
+/*  z-index: 999;*/
+/*}*/
 
 .headerChildDiv {
   width: 100%;
