--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,51 +1,96 @@
 .headerParentDiv {
-  padding: 10px;
-  background-color: whitesmoke;
-  position: fixed;
-  width: 100vw;
-  z-index: 1;
+    background-color: whitesmoke;
+    position: relative;
+    width: 100vw;
+    height: 55vh;
+}
+
+.headerTopBar {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.headerTopBar > div {
+    padding: 10px;
+}
+
+.searchContainer {
+
+    position: absolute;
+    width: 100%;
+    height: 451px;
+
+    background: url(headerBg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 5px;
+
+}
+
+.logo {
+
+    margin: 20px 20px;
+
+}
+
+.searchBlock {
+    position: absolute;
+    height: 10vh;
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.searchButton {
+    width: 6em;
+    height: 48px;
+    border: 2px solid #002f34;
+    border-radius: 4px;
+    background-color: white;
 }
 
 .headerChildDiv {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .placeSearch {
-  width: 16em;
-  height: 48px;
-  display: flex;
-  align-items: center;
-  padding: 0 8px;
-  border: 2px solid #002f34;
-  border-radius: 4px;
-  background-color: white;
+    width: 25em;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    padding: 0 8px;
+    border: 2px solid #002f34;
+    border-radius: 4px;
+    background-color: white;
 }
 
 .placeSearch ::selection {
-  border-color: #23e5db;
-  outline-color: #23e5db;
+    border-color: #23e5db;
+    outline-color: #23e5db;
 }
 
 .placeSearch input {
-  border-color: transparent;
-  outline-color: transparent;
+    border-color: transparent;
+    outline-color: transparent;
 }
 
 .productSearch {
-  width: 35em;
-  height: 48px;
-  margin-left: 2em;
-  border-radius: 4px;
-  /* border: 2px solid #002f34; */
-  /* display: flex;
-  align-items: center; */
-  /* background-color: white; */
-  /* display: flex;
-  align-items: center; */
-  /* justify-content: space-between; */
+    width: 35em;
+    height: 48px;
+    margin-left: 2em;
+    border-radius: 4px;
+    /* border: 2px solid #002f34; */
+    /* display: flex;
+    align-items: center; */
+    /* background-color: white; */
+    /* display: flex;
+    align-items: center; */
+    /* justify-content: space-between; */
 }
 
 /* .productSearch .input {
@@ -80,123 +125,121 @@
 } */
 
 .language {
-  height: 48px;
-  display: flex;
-  align-items: center;
+    height: 48px;
+    display: flex;
+    align-items: center;
 }
 
 .language span {
-  /* justify-content: space-between;
-  align-items: center; */
-  font-size: 15px;
-  white-space: normal;
-  text-overflow: ellipsis;
-  font-weight: bolder;
-  margin-right: 5px;
+    /* justify-content: space-between;
+    align-items: center; */
+    font-size: 15px;
+    white-space: normal;
+    text-overflow: ellipsis;
+    font-weight: bolder;
+    margin-right: 5px;
 }
 
 
 .span {
-  text-decoration: none;
-  font-size: 16px;
-  white-space: normal;
-  text-overflow: ellipsis;
-  font-weight: bolder;
-  margin-right: 5px;
-  cursor: pointer;
+    text-decoration: none;
+    font-size: 16px;
+    white-space: normal;
+    text-overflow: ellipsis;
+    font-weight: bolder;
+    margin-right: 5px;
+    cursor: pointer;
 }
 
 .loginPage hr {
-  margin: 0;
-  background-color: black;
-  height: 2px;
+    margin: 0;
+    background-color: black;
+    height: 2px;
 }
 
-.loginPage a{
-  text-decoration: none;
+.loginPage a {
+    text-decoration: none;
 }
 
 .sellMenu {
-  position: relative;
-  cursor: pointer;
+    position: relative;
+    cursor: pointer;
 }
 
 .sellMenu .all {
-  fill: white;
+    fill: white;
 }
 
 .sellMenu .top {
-  fill: #23e5db;
+    fill: #23e5db;
 }
 
 .sellMenu .left {
-  fill: #ffce32;
+    fill: #ffce32;
 }
 
 .sellMenu .right {
-  fill: #3a77ff;
+    fill: #3a77ff;
 }
+
 .sellMenu .sellMenuContent {
-  display: flex;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 14px;
-  font-weight: 700;
-  letter-spacing: 0.5px;
-  color: #002f34;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    color: #002f34;
 }
 
 /* .sellMenu .sellMenuContent svg {
   align-items: center;
 } */
 .sellMenu .sellMenuContent span {
-  margin-left: 5px;
+    margin-left: 5px;
 }
 
 @media only screen and (max-width: 700px) {
-  .placeSearch,
-  .productSearch{
-    display: none;
-  }
+    .placeSearch,
+    .productSearch {
+        display: none;
+    }
 }
-.logout-span{
-  cursor: pointer;
+
+.logout-span {
+    cursor: pointer;
 }
 
 .dataResult-header {
-    
-  position: absolute;
-  top: 60px;
-  left: 85px;
-   width: 16em;
-   height: 150px;
-   background-color: white;
-   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-   overflow: hidden;
-   overflow-y: auto;
- }
- 
- /* .dataResult-header::-webkit-scrollbar {
-   display: none;
- } */
- 
- .dataResult-header .dataItem-header {
-   width: 100%;
-   height: 30px;
-   display: flex;
-   align-items: center;
-   color: black;
-   font-size: smaller;
- }
- 
- .dataItem-header p {
-   margin-left: 10px;
- }
 
- 
- .dataResult-header  :hover {
-   background-color: #ebeeef;
- }
+    position: absolute;
+    top: 60px;
+    left: 85px;
+    width: 16em;
+    height: 150px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.dataResult-header .dataItem-header {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    color: black;
+    font-size: smaller;
+}
+
+.dataItem-header p {
+    margin-left: 10px;
+}
+
+
+.dataResult-header :hover {
+    background-color: #ebeeef;
+}
  
