added all models grid

--- a/assets/styles/pages/Home.css
+++ b/assets/styles/pages/Home.css
@@ -4,4 +4,5 @@
     justify-content: space-between; /* Distribute items with even space */
     align-items: start; /* Align items vertically in the center */
     height: fit-content;
+    width: 100%;
 }
