--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 .headerParentDiv {
     background-color: whitesmoke;
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 55vh;
 }
 
