--- a/src/Components/Newest/Newest.css
+++ b/src/Components/Newest/Newest.css
@@ -1,6 +1,7 @@
 .newestContainer {
     background-color: whitesmoke;
     width: auto;
+    max-width: 100%;
     padding: 10px 20px 10px 50px;
     height: 60vh;
 }
