--- a/src/Components/Posts/Posts.css
+++ b/src/Components/Posts/Posts.css
@@ -1,23 +1,22 @@
-.heading {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-}
-.heading :first-child {
-  font-size: 24px;
-  color: #002f34;
+#heading {
+    font-size: 36px;
+    font-weight: bold;
+    color: #227F76;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
-.heading :last-child {
-  font-size: 14px;
-  color: #002f34;
+#allModelsContainer {
+    background-color: lightgrey;
+    width: auto;
+    padding: 10px 20px 10px 50px;
+    height: fit-content;
 }
 
 .posts-list {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 30px;
-  padding-top: 5em;
-  padding-left: 2em;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 70px;
 }
