--- a/src/Components/Newest/Newest.css
+++ b/src/Components/Newest/Newest.css
@@ -15,8 +15,8 @@
 .newestCardContainer {
     display: flex;
     flex-direction: row;
+    width: 100%;
     height: auto;
-    width: auto;
 }
 
 .newestCardContainer > div {
