--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -1,36 +1,64 @@
 .signupParentDiv {
-    border: 1px solid black;
-    width: max-content;
-    padding: 10px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 6px;
+    font-family: 'Roboto', sans-serif;
+    width: 40%;
+    background: rgba(0, 0, 0, 0.8);
+    height: 100vh;
+    color: #fff;
+    overflow: hidden;
+    float: right;
+    position: relative;
+    padding: 155px;
+    text-align: center;
   }
-  
+
+.signupParentDiv #signupLogoText{
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 20px !important;
+    font-size: 70px;
+    font-weight: 520;
+    line-height: 1.1;
+    color: #9ab7ce;
+}
+
   .signupParentDiv .input {
-    border-top-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    outline-color: transparent;
-    background-color:transparent;
+      position: relative;
+      border-collapse: separate;
+      width: 80%;
+      height: 48px;
+      font-size: 14px;
+      border-radius: 5px !important;
+      padding-left: 5px;
+      padding-right: 5px;
+      line-height: 1.42857143;
+      background-color: #fff;
+      color: #555;
+      border: 1px solid #ccc;
   }
   
   .signupParentDiv button {
-    width: 100%;
-    height: 48px;
-    /* border-color: transparent; */
-    background-color: #002f34;
-    color: whitesmoke;
-    font-weight: 900;
+      width: 80%;
+      height: 48px;
+      background: #002f34;
+      color: #fff;
+      font-weight: 900;
+      border:none;
+      border-radius:5px;
   }
   .signupParentDiv button:hover {
     background-color: white;
     color: #002f34;
     border: 2px solid #002f34;
   }
-  
+
+.signupParentDiv #loginSignUp a:link{
+    font-weight: bold;
+    color: #9ab7ce;
+}
+
+.signupParentDiv #loginSignUp a:visited{
+    color: #9ab7ce;
+}
+
   .signupParentDiv a {
     display: flex;
     justify-content: center;
