--- a/assets/styles/pages/Home.css
+++ b/assets/styles/pages/Home.css
@@ -1,3 +1,8 @@
-.homeParentDiv{
-    ;
+.homeParentDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Distribute items with even space */
+    align-items: start; /* Align items vertically in the center */
+    height: fit-content;
+    width: 100%;
 }
