--- a/src/Components/PostCards/PostCard.css
+++ b/src/Components/PostCards/PostCard.css
@@ -1,28 +1,24 @@
 .card {
     margin-right: 15px;
-    max-width: 250px;
-    width: 250px;
-    height: 250px;
+    max-width: 312px;
+    width: 312px;
+    height: fit-content;
     display: inline-block;
     cursor: pointer;
+    background-color: inherit;
+    border-color : transparent ;
 }
 
 .card .image-container {
-    width: 248px;
-    height: 250px;
+    width: 312px;
+    height: 424px;
 }
 
 .card-container {
+    top: 1em;
     position: relative;
-    width: 248px;
-    height: 250px;
-}
-
-.favorite {
-    top: 5px;
-    right: 5px;
-    position: absolute;
-    z-index: 2;
+    width: 312px;
+    height: fit-content;
 }
 
 .card .image-container .favorite img:hover {
@@ -39,27 +35,32 @@
     position: relative;
     justify-content: center;
     width: 100%;
-    height: 80%;
+    height: 100%;
     align-items: center;
     z-index: 1;
 }
 
+.card .image-container .image:hover {
+    border-radius: 1px;
+    border: 2px solid seagreen;
+}
+
 .card .image img {
-    height: 100px;
     max-width: 100%;
-    width: 100%;
+    width: 312px;
+    height: 424px;
     max-height: 100%;
-    min-height: 100%;
     text-align: center;
     border-radius: 2px;
+    background-color: inherit;
 }
 
 .card .content {
-  margin-top: -30px;
+    height: auto;
 }
 
 .card .content .rate {
-    font-size: medium;
+    font-size: large;
     font-weight: bold;
     display: flex;
     justify-content: flex-end;
@@ -81,7 +82,7 @@
 }
 
 .card .content .name {
-    font-size: medium;
+    font-size: x-large;
     font-weight: bold;
     display: flex;
     justify-content: flex-start;
@@ -101,8 +102,8 @@
 }
 
 .favorite {
-    top: 5px;
-    right: 5px;
+    top: 20px;
+    right: 20px;
     position: absolute;
     z-index: 2;
 }
