--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,7 +1,8 @@
-body {
+#background {
     background-image: url("https://damassets.autodesk.net/content/dam/autodesk/draftr/19187/3dp.jpg");
+    height: 100vh;
+    width: 100vw;
     background-repeat: no-repeat;
-    background-origin: padding-box;
     background-size: cover;
 }
 
