--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -5,26 +5,37 @@
     height: 55vh;
 }
 
+.headerTopBar {
+    height: fit-content;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.headerTopBar > *:first-child {
+    margin-right: auto; /* Pushes the last child to the end */
+}
+
 .headerParentDivWithoutSearch {
     background-color: whitesmoke;
     position: relative;
     width: 100%;
     height: fit-content;
+
 }
 
-.headerTopBar {
+.headerTopBarLinks {
     display: flex;
     justify-content: flex-end;
 }
 
-.headerTopBar > div {
+.headerTopBarLinks > div {
     padding: 10px;
     cursor: pointer;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-.headerTopBar > div:hover {
+.headerTopBarLinks > div:hover {
     color: darkslateblue;
     background-color: lightgrey;
     border-radius: 15px;
@@ -45,9 +56,8 @@
 }
 
 .logo {
-
     margin: 20px 20px;
-
+    width: fit-content;
 }
 
 .searchBlock {
