added my models page

--- a/src/Pages/Account.css
+++ b/src/Pages/Account.css
@@ -12,6 +12,7 @@
     grid-area: sidebar;
     height: 94vh;
     width: 16vw;
+    position: fixed;
 }
 
 #avatar-image {
@@ -22,9 +23,11 @@
 }
 
 #right-panel {
+    margin-left: 16vw;
     grid-area: content;
     background-color: lightgray;
-    height: 94vh;
+    height: fit-content;
+    min-height: 92vh;
     width: 84vw;
 }
 
@@ -87,4 +90,10 @@ li:hover {
     margin-left: 50px;
     font-weight: bold;
     font-size: 30px;
+}
+
+#container-mypost {
+    margin: 50px 0 0 50px;
+    display: grid;
+    grid-template: repeat(4, 1fr)/repeat(4, 1fr);
 }
