--- a/src/Components/View/ViewComponent.css
+++ b/src/Components/View/ViewComponent.css
@@ -66,7 +66,7 @@
     color: black
 }
 
-.ganers-list-item{
+.ganers-list-item {
     display: inline-block;
     height: 40px;
     margin-right: 10px; /* add spacing between items */
@@ -75,22 +75,23 @@
     align-items: center;
     justify-content: center;
 }
-.ganers-list-item:hover{
+
+.ganers-list-item:hover {
     background-color: transparent;
 }
 
-.ganers-list{
+.ganers-list {
     /*display: inline;*/
     height: 40px;
-    padding-inline-start: 0px;
+    padding-inline-start: 0;
     padding-bottom: 40px;
     margin-bottom: 100px;
 }
 
-.ganers-button{
+.ganers-button {
     height: 40px;
-    font-size: 20px ;
-    border: none ;
+    font-size: 20px;
+    border: none;
     border-radius: 20px;
     padding-right: 10px;
     display: flex;
@@ -100,17 +101,17 @@
     background-color: whitesmoke;
 }
 
-.ganers-button:hover{
+.ganers-button:hover {
     background-color: lightgray;
 }
 
-.model-buttons-box{
+.model-buttons-box {
     display: flex;
     margin-top: 30px;
     gap: 20px;
 }
 
-.previewImage{
+.previewImage {
     height: 60px;
     margin-left: auto;
     margin-right: auto;
@@ -129,7 +130,7 @@
 
 }
 
-.preview-button:hover{
+.preview-button:hover {
     background-color: lightgray;
 }
 
@@ -151,9 +152,9 @@
 }
 
 .download-button img {
-  margin-right: 5px;  /* Adjust spacing between icon and text */
-  height: 20px;   /* Set icon image height */
-  width: 20px;    /* Set icon image width */
+    margin-right: 5px; /* Adjust spacing between icon and text */
+    height: 20px; /* Set icon image height */
+    width: 20px; /* Set icon image width */
 }
 
 .viewParentHorizontalDiv .rightSection .contactDetails {
