--- a/src/Components/Posts/Posts.css
+++ b/src/Components/Posts/Posts.css
@@ -17,6 +17,7 @@
 .posts-list {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-column-gap: 50px;
+    grid-column-gap: 5em;
     grid-row-gap: 70px;
+    margin-left: 2em;
 }
