--- a/src/Components/Chat/Chat.css
+++ b/src/Components/Chat/Chat.css
@@ -6,10 +6,20 @@
   text-align: center;
   max-width: 728px;
   margin: 0 auto;
+
+}
+.headerText{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #227F76;
+  font-size: 50px;
+  /*padding-right: 50%;*/
+  transform: translate(300px);
 }
 
 .Chat header {
-  background-color: #181717;
+  background-color: lightgrey;
   height: 10vh;
   min-height: 50px;
   color: white;
@@ -30,7 +40,7 @@
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background-color: rgb(40, 37, 53);
+  background-color: rgb(235, 235, 235);
 }
 
 .Chat main {
@@ -47,7 +57,7 @@
 }
 
 .Chat main::-webkit-scrollbar-track {
-  background: #1e1e24;
+  background: rgb(235, 235, 235);
 }
 
 .Chat main::-webkit-scrollbar-thumb {
@@ -67,7 +77,8 @@
 
 .Chat form button {
   width: 20%;
-  background-color: rgb(56, 56, 143);
+  background-color: white;
+  border-radius: 0px;
 }
 
 
@@ -75,15 +86,15 @@
   line-height: 1.5;
   width: 100%;
   font-size: 1.5rem;
-  background: rgb(58, 58, 58);
-  color: white;
+  background: whitesmoke;
+  color: black;
   outline: none;
   border: none;
   padding: 0 10px;
 }
 
 .Chat button {
-  background-color: #282c34; /* Green */
+  background-color: #227F76; /* Green */
   border: none;
   color: white;
   padding: 15px 32px;
@@ -91,6 +102,7 @@
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
+  border-radius: 8px;
   font-size: 1.25rem;
 }
 
@@ -171,7 +183,7 @@
   position: fixed;
   right: 0;
   top: 50%;
-  transform: translateY(-50%) translateX(90%); /* Center vertically */
+  transform: translateY(-50%) translateX(100%); /* Center vertically */
   width: 728px;
   height: 100%; /* Adjust chat window size */
   background-color: #fff;
@@ -187,23 +199,42 @@
 .chat-toggle {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  left: -30px; /* Position toggle button */
+  transform: rotate(180deg);
+  left: -70px; /* Position toggle button */
   cursor: pointer;
-  background-color: transparent;
-  border: none;
+  background-color: #227F76;
+  color: white;
+  border:  #227F76 ;
   padding: 10px;
+  height: fit-content;
+  width: 70px;
+  writing-mode: vertical-rl;
+  text-align: center;
+  font-size: 30px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.submitButton{
+  /*width: 30px; !* Adjust width and height as needed *!*/
+  /*height: 30px;*/
+  /*background-image: url("path/to/your/emoji.png");*/
+  border: none;
+  border-radius: 0;
+  background-size: cover; /* Resize image to fit container */
 }
 
-.chat-toggle img {
-  width: 20px;
-  height: 20px;
-  transition: transform 0.3s ease-in-out;
+.submitButtonIcon{
+  fill:#227F76;
 }
+/*.chat-toggle img {*/
+/*  width: 20px;*/
+/*  height: 20px;*/
+/*  transition: transform 0.3s ease-in-out;*/
+/*}*/
 
-.chat-toggle.arrow-right img {
-  transform: rotate(180deg); /* Rotate arrow for right direction */
-}
+/*.chat-toggle.arrow-right img {*/
+/*  transform: rotate(180deg); !* Rotate arrow for right direction *!*/
+/*}*/
 
 .chat-window {
   position: absolute;
